chore: add authentication logic to swagger
